2003-03-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/winddk.h (PCUNICODE_STRING): Remove incorrect
	typedef.

2003-03-13  Bang Jun-Young  <junyoung@netbsd.org>

	* lib/kernel32.def (Module32{First,Next}{,W}): Add missing exports.
	(Process32{First,Next}{,W}): Ditto.
	(Thread32{First,Next}): Ditto.
	* include/ntdef.h (PCUNICODE_STRING): Add typedef.

2003-03-12  Earnie Boyd  <earnie@users.sf.net>

	* include/mswsock.h: Correct invalid filter for _WINSOCK2_H.
	Thanks to Jim Barton <jmbarton@users.sf.net>.

2003-03-12  Ranjit Mathew  <rmathew@hotmail.com>

        * include/winnt.h (_IMAGE_SEPARATE_DEBUG_HEADER): Expose
        member SectionAlignment.

2003-03-11  Earnie Boyd  <earnie@users.sf.net>

	* include/winsvc.h (SERVICE_NO_CHANGE): Use hex constant to avoid
	warnings.
	Thanks to Fabricio D. Rossi <gurusoda@users.sf.net>.
	* Makefile.in (bindist): Correct process.
	* lib/Makefile.in (install): Ditto.
	Thanks to Jeff Bonnggren <jbon@users.sf.net>.

2003-03-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/rasdlg.h: New file.
	* lib/rasdlg.def: New file.
	* lib/test.c: Include rasdlg.h.

2003-03-06  Christopher January  <chris@atomice.net>

	* include/winbase.h (FindFirstVolume): Add declaration.
	(FindNextVolume): Add declaration.
	(FindVolumeClose): Add declaration.
	(GetSystemTimes): Add declaration.
	* include/winnt.h: Add define for PF_XMMI64_INSTRUCTIONS_AVAILABLE.

2003-03-06  Danny Smith  <dannysmith@users.sourceforge.net>

	*lib/kernel32.def (GetSystemTimes): Add stub.

2003-03-04  Heiko Gerdau  <hg@technosis.de>

	* oleidl.h (IOleObject): Correct GetUserType prototype.
	(IViewObject2): Correct GetExtent prototype.
	* olectl.h (DISPIP_): Add new defines
	* ocidl.h (IOleInPlaceSiteWindowless): Add new interface.

2003-03-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/olectl.h (OleLoadPictureEx) Add prototype.
	(OleLoadPictureFile): Ditto.
	(OleLoadPictureFileEx): Ditto.
	(OleLoadPicturePath): Ditto.